# claexa

./: README.md
ai-service/: .dockerignore  .gitignore  Dockerfile  README.md  Taskfile.yml  ai_service_pb2.py  ai_service_pb2_grpc.py  docker-compose.yml  env.example.txt  pyproject.toml
ai-service/config/imagemagick/: policy.xml
ai-service/proto/: ai_service.proto
ai-service/scripts/: compile_protos.sh  grpc_healthcheck.py
ai-service/src/: ai_service_pb2.py  ai_service_pb2_grpc.py  config.py  grpc_server.py
ai-service/src/grpc_types/: __init__.py  ai_service_pb2.py  ai_service_pb2_grpc.py
ai-service/src/services/question_paper/: agent.py  grpc_mapper.py  mapper.py  model_provider.py  service.py  system_prompt.md  user_prompt.py
ai-service/src/services/question_paper/models/: __init__.py  ai_question_paper.py  core_question_paper.py
ai-service/src/utils/: errors.py  gcp_credentials.py  google_ai_client.py
ai-service/src/utils/aws/: __init__.py  s3_document_fetcher.py
ai-service/src/utils/converter/: __init__.py  latex_to_image.py  reference_mapper.py
ai-service/tests/: test_image_rendering.py
app-server/: .cursorignore  (+13 more)
utility-scripts/: .gitignore  README.md  Taskfile.yml  pyproject.toml
utility-scripts/content/: config.py  document.py  hashing.py  main.py  main_full_batch.py  pinecone_vector_store.py  s3_object_storage.py  vector_models.py
utility-scripts/content/ai/: batch_generation.py  document.py  generation.py  system_prompt.md  vector_generation.py
utility-scripts/content/danger/: object_bucket_cleanup.py  vector_store_cleanup.py
(+363 files in other folders)
